Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Fix : transaction().abort() -> transaction.abort() / rev 41573
- #1330: creation of "CPS Flexible Type Information" failed if the javascript 
  was disabled
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-